--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <title>Document</title>
 </head>
 
-<body class="bg-cover bg-center bg-no-repeat bg-gray-100 flex flex-col h-screen" x-data="{ count: 0 }" x-on:click="count++"
-    style="background-image: url(./images/dog.jpg)" id="item">
-    <header class="text-white text-5xl p-3 text-shadow-black md:text-7xl">
+<body class="flex flex-col h-screen bg-gray-100 bg-center bg-no-repeat bg-cover select-none" x-data="{ count: 0 }" x-on:click="count++"
+    style="background-image: url(./images/dog.jpg);" id="item">
+    <header class="p-3 text-5xl text-white text-shadow-black md:text-7xl">
         <!--  -->
-        <div class="flex justify-between items-center">
+        <div class="flex items-center justify-between">
             <div>
                 <a href="">
                     <i class="fab fa-github"></i>
@@ -27,26 +27,26 @@
                 </a>
             </div>
         </div>
-        <div class="text-center mt-5 mx-auto">
+        <div class="mx-auto mt-5 text-center">
             <h1 class="font-semibold">POPDAN</h1>
         </div>
     </header>
 
-    <main class="mt-6 flex-grow text-6xl text-white md:text-7xl">
+    <main class="flex-grow mt-6 text-6xl text-white md:text-7xl">
         <!--  -->
         <div>
-            <h1 class="text-shadow-black font-semibold text-center" x-text="count"></h1>
+            <h1 class="font-semibold text-center text-shadow-black" x-text="count"></h1>
         </div>
 
     </main>
 
-    <footer class="bg-gray-900 py-4 px-4">
+    <footer class="px-4 py-4 bg-gray-900">
         <!--  -->
-        <div class="flex gap-4 items-center justify-between">
+        <div class="flex items-center justify-between gap-4">
             <div>
-                <h1 class="text-md font-semibold text-white uppercase">contact</h1>
+                <h1 class="font-semibold text-white uppercase text-md">contact</h1>
             </div>
-            <div class="font-thin text-xs text-white">
+            <div class="text-xs font-thin text-white">
                 <i class="fas fa-envelope-square"><span class="pl-2 font-thin">s6003051613133@gmail.com</span></i>
             </div>
 
@@ -75,10 +75,10 @@
         </div>
         <div class="flex justify-between mt-3">
             <div>
-                <p class="font-thin text-xs text-white text-center">@2021 Copyright: DanPhranakorn</p>
+                <p class="text-xs font-thin text-center text-white">@2021 Copyright: DanPhranakorn</p>
             </div>
             <div>
-                <p class="font-thin text-xs text-white text-center">version 1.00</p>
+                <p class="text-xs font-thin text-center text-white">version 1.00</p>
             </div>
         </div>
 
@@ -104,12 +104,14 @@
         function pressingDown(e) {
             // Start the timer
             item.style.backgroundImage = "url(./images/dog-active.jpg)";
+            item.style.transition = "";
             console.log("Pressing!");
         }
 
         function notPressingDown(e) {
             // Stop the timer
-            item.style.backgroundImage = "url(./images/dog.jpg)"
+            item.style.backgroundImage = "url(./images/dog.jpg)";
+            item.style.transition = "background-image 0.2s";
             console.log("Not pressing!");
         }
     </script>
